<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/vuelos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_public_black_48dp"
                    android:id="@+id/drawer_internacional"
                    android:title="@string/internacionales" />
                <item
                    android:icon="@drawable/ic_map_black_48dp"
                    android:id="@+id/drawer_nacional"
                    android:visible="false"
                    android:title="@string/nacionales" />

            </group>


        </menu>
    </item>

    <item android:title="@string/otros">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_customs_officer_104"
                    android:id="@+id/drawer_aduana"
                    android:title="@string/aduana" />
                <item
                    android:icon="@drawable/ic_paid_parking_filled_100"
                    android:id="@+id/drawer_parqueo"
                    android:visible="true"
                    android:title="@string/parqueo" />

            </group>


        </menu>
    </item>


    <item android:title="@string/options">
        <menu>
                <item
                    android:id="@+id/drawer_rate"
                    android:icon="@drawable/ic_grade_black_48dp"
                    android:title="@string/rate" />
                <item
                    android:id="@+id/drawer_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
        </menu>
    </item>


</menu>
