<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edxavier.vueloseaai.FragmentAduana">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/aduana"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:text="@string/aduana_intro"
                android:id="@+id/textView2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/md_black_1000_25" />


            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:text="@string/aduana_1"
                />

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aduana_1_1"
                    />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:text="@string/aduana_2"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aduana_2_1"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:text="@string/aduana_3"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aduana_3_1"
                    />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:text="@string/aduana_4"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aduana_4_1"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>
